@@ -1,7 +1,14 @@
+2011-07-30  Juri Linkov  <juri@jurta.org>
+
+	* dired-aux.el (dired-touch-initial): Remove function.
+	(dired-do-chxxx): For op-symbol `touch', set `initial' to the
+	current time, and `default' to the last modification time of the
+	current marked file (bug#6887).
+
 2011-07-28  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* simple.el (goto-line): Use string-to-number to provide a
-	numeric argument to read-number.
+	numeric argument to read-number (bug#9163).
 
 2011-07-27  Michael Albinus  <michael.albinus@gmx.de>
 
